Update PostmanCollectionServiceImpl.java